# src/routes/incidencia.routes.ts
@@ -1,5 +1,8 @@
 import { Router } from 'express';
-import { listarIncidencias } from '../controllers/incidencia.controller';
+import {
+  listarIncidencias,
+  obtenerIncidencia,
+} from '../controllers/incidencia.controller';
 import { verificarPermiso, verificarToken } from '../middlewares/auth.middleware';
 
 const router: Router = Router();
@@ -9,6 +12,13 @@ router.get(
   verificarToken,
   verificarPermiso('incidencias:leer'),
   listarIncidencias
+);
+
+router.get(
+  '/:id',
+  verificarToken,
+  verificarPermiso('incidencias:leer'),
+  obtenerIncidencia
 );
 
 export default router;
